Сверстан базовый вид для метро стиля

--- a/baners.html
+++ b/baners.html
@@ -88,9 +88,9 @@
                     <ul class="bnr-tumbnails">
                         <li>
                             <div class="bnr-imgwrap">
-                                <img src="uploads/child.jpg" title="Дождевик" />
+                                <img src="uploads/itemM1.jpg" title="Платье BCGB Max Azria" />
                             </div>
-                            <h3 class="bnr-title">Дождевик</h3>
+                            <h3 class="bnr-title">Платье BCGB Max Azria</h3>
                             <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
                             <p class="bnr-cosial">Поделиться с друзьями: 
@@ -101,10 +101,10 @@
                         </li>
                         <li>
                             <div class="bnr-imgwrap">
-                                <img src="uploads/child.jpg" title="Дождевик" />
+                                <img src="uploads/itemM2.jpg" title="Платье Dolce&Gabbana" />
                             </div>
-                            <h3 class="bnr-title">Дождевик</h3>
-                            <h3 class="bnr-price">2 990 руб.</h3>
+                            <h3 class="bnr-title">Платье Dolce&Gabbana</h3>
+                            <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
                             <p class="bnr-cosial">Поделиться с друзьями: 
                                 <a href="#" class="bnr-fb"></a>
@@ -114,10 +114,10 @@
                         </li>
                         <li>
                              <div class="bnr-imgwrap">
-                                <img src="uploads/child.jpg" title="Дождевик" />
+                                <img src="uploads/itemM3.jpg" title="Платье DKNY" />
                             </div>
-                            <h3 class="bnr-title">Дождевик</h3>
-                            <h3 class="bnr-price">2 990 руб.</h3>
+                            <h3 class="bnr-title">Платье DKNY</h3>
+                            <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
                             <p class="bnr-cosial">Поделиться с друзьями: 
                                 <a href="#" class="bnr-fb"></a>
@@ -127,9 +127,22 @@
                         </li>
                         <li>
                              <div class="bnr-imgwrap">
-                                <img src="uploads/child.jpg" title="Дождевик" />
+                                <img src="uploads/itemM4.jpg" title="Туника Moschino" />
                             </div>
-                            <h3 class="bnr-title">Дождевик</h3>
+                            <h3 class="bnr-title">Туника Moschino</h3>
+                            <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial">Поделиться с друзьями: 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                             <div class="bnr-imgwrap">
+                                <img src="uploads/itemM5.jpg" title="Плaатье DKNY" />
+                            </div>
+                            <h3 class="bnr-title">Плaатье DKNY</h3>
                             <h3 class="bnr-price">2 990 руб.</h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
                             <p class="bnr-cosial">Поделиться с друзьями: 
