--- a/baners.html
+++ b/baners.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>baners</title>
     <link rel="stylesheet" href="css/baner.css" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="baner.js"></script>
+    <script src="js/jquery-1.8.2.min.js"></script>
+    <script src="js/baner.js"></script>
     <style>
         * {  margin: 0; padding: 0; outline:0; font-size: 100%; vertical-align: baseline; background: transparent;}
         h1, h2, h3, h4, h5, h6, p, pre, blockquote, form, fieldset, table, ul { margin: 0; }
@@ -35,8 +35,7 @@
         }
 
         #list > li {
-            float: left;
-            width: 500;
+           width: 500;
         }
 
 
