Завершены высокий и квадратный размеры метро стиля

--- a/baners.html
+++ b/baners.html
@@ -48,8 +48,8 @@
                 <p class="selectors">
                     <label>Стиль: 
                     <select name="style" >
-                        <option value="usual">Обычный </option>
-                        <option value="social">Соцсети </option>
+                        <option value="usual" >Обычный </option>
+                        <option value="social" >Соцсети </option>
                         <option value="video">Видео</option>
                         <option value="metro" selected>Метро</option>
                         <option value="treed">3-D</option>
@@ -57,10 +57,10 @@
 
                     <label>Размер: 
                     <select name="size" >
-                        <option value="normal" selected>200x400</option>
-                        <option value="long">160x600</option>
-                        <option value="quadratic">300x250</option>
-                        <option value="wide">728x90</option>
+                        <option value="normal" >200x400</option>
+                        <option value="long" >160x600</option>
+                        <option value="quadratic" selected>300x250</option>
+                        <option value="wide" >728x90</option>
                     </select></label>   
                 </p>
 
@@ -75,7 +75,7 @@
                         <h3 class="bnr-title">Дождевик</h3>
                         <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                         <a href="#" class="bnr-button">Купить<span></span></a>
-                        <p class="bnr-cosial">Поделиться с друзьями: 
+                        <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                             <a href="#" class="bnr-fb"></a>
                             <a href="#" class="bnr-vk"></a>
                             <a href="#" class="bnr-ok"></a>
@@ -92,7 +92,7 @@
                             <h3 class="bnr-title">Платье BCGB Max Azria</h3>
                             <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -105,7 +105,7 @@
                             <h3 class="bnr-title">Платье Dolce&Gabbana</h3>
                             <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span>  
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -118,7 +118,7 @@
                             <h3 class="bnr-title">Платье DKNY</h3>
                             <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -131,7 +131,7 @@
                             <h3 class="bnr-title">Туника Moschino</h3>
                             <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -144,7 +144,7 @@
                             <h3 class="bnr-title">Плaатье DKNY</h3>
                             <h3 class="bnr-price">2 990 руб.</h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -190,7 +190,7 @@
                             <h3 class="bnr-title">Дождевик</h3>
                             <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -203,7 +203,7 @@
                             <h3 class="bnr-title">Дождевик</h3>
                             <h3 class="bnr-price">2 990 руб.</h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -217,7 +217,7 @@
                             <h3 class="bnr-title">Дождевик</h3>
                             <h3 class="bnr-price">2 990 руб.</h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
@@ -230,7 +230,7 @@
                             <h3 class="bnr-title">Дождевик</h3>
                             <h3 class="bnr-price">2 990 руб.</h3>
                             <a href="#" class="bnr-button">Купить<span></span></a>
-                            <p class="bnr-cosial">Поделиться с друзьями: 
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                                 <a href="#" class="bnr-fb"></a>
                                 <a href="#" class="bnr-vk"></a>
                                 <a href="#" class="bnr-ok"></a>
