--- a/baners.html
+++ b/baners.html
@@ -59,8 +59,8 @@
                     <select name="size" >
                         <option value="normal" >200x400</option>
                         <option value="long" >160x600</option>
-                        <option value="quadratic" selected>300x250</option>
-                        <option value="wide" >728x90</option>
+                        <option value="quadratic" >300x250</option>
+                        <option value="wide" selected>728x90</option>
                     </select></label>   
                 </p>
 
