--- a/baners.html
+++ b/baners.html
@@ -50,17 +50,61 @@
                     <select name="style" >
                         <option value="usual" >Обычный </option>
                         <option value="social" >Соцсети </option>
-                        <option value="video">Видео</option>
-                        <option value="metro" selected>Метро</option>
+                        <option value="video" selected>Видео</option>
+                        <option value="metro" >Метро</option>
                         <option value="treed">3-D</option>
                     </select></label>
 
                     <label>Размер: 
                     <select name="size" >
-                        <option value="normal" >200x400</option>
+                        <option value="normal" selected>200x400</option>
                         <option value="long" >160x600</option>
                         <option value="quadratic" >300x250</option>
-                        <option value="wide" selected>728x90</option>
+                        <option value="wide" >728x90</option>
+                    </select></label>   
+                </p>
+
+                <!-- Банер Детской одежды -->
+                <div class="baner usual normal">
+                    <a href="" class="bnr-logo">&nbsp;<img src="uploads/logo.png"></a>
+
+                    <div class="bnr-prevu">
+                        <div class="bnr-imgwrap">
+                            <img src="uploads/child.jpg" title="Дождевик" />
+                        </div>
+                        <h3 class="bnr-title">Фотосессия Glance<br />«Весна 2013»</h3>
+                        <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
+                        <a href="#" class="bnr-button">Перейти на сайт<span></span></a>
+                        <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                            <a href="#" class="bnr-fb"></a>
+                            <a href="#" class="bnr-vk"></a>
+                            <a href="#" class="bnr-ok"></a>
+                        </p>
+                    </div>
+                    <span class="bnr-prev"><span></span></span>
+                    <span class="bnr-next"><span></span></span>
+
+                   
+                </div>    
+        
+            </li>
+              <li>
+                <p class="selectors">
+                    <label>Стиль: 
+                    <select name="style" >
+                        <option value="usual" >Обычный </option>
+                        <option value="social" >Соцсети </option>
+                        <option value="video" selected>Видео</option>
+                        <option value="metro" >Метро</option>
+                        <option value="treed">3-D</option>
+                    </select></label>
+
+                    <label>Размер: 
+                    <select name="size" >
+                        <option value="normal" selected>200x400</option>
+                        <option value="long" >160x600</option>
+                        <option value="quadratic" >300x250</option>
+                        <option value="wide" >728x90</option>
                     </select></label>   
                 </p>
 
