--- a/baners.html
+++ b/baners.html
@@ -50,9 +50,9 @@
                     <select name="style" >
                         <option value="usual" >Обычный </option>
                         <option value="social" >Соцсети </option>
-                        <option value="video" selected>Видео</option>
+                        <option value="video" >Видео</option>
                         <option value="metro" >Метро</option>
-                        <option value="treed">3-D</option>
+                        <option value="treed" selected>3-D</option>
                     </select></label>
 
                     <label>Размер: 
@@ -72,9 +72,9 @@
                         <div class="bnr-imgwrap">
                             <img src="uploads/child.jpg" title="Дождевик" />
                         </div>
-                        <h3 class="bnr-title">Фотосессия Glance<br />«Весна 2013»</h3>
-                        <h3 class="bnr-price">2 990 руб.<del>2 990 руб.</del></h3>
-                        <a href="#" class="bnr-button">Перейти на сайт<span></span></a>
+                        <h3 class="bnr-title">Пароварка Tefal</h3>
+                        <h3 class="bnr-price">4 690 руб.<del>2 990 руб.</del></h3>
+                        <a href="#" class="bnr-button">Купить<span></span></a>
                         <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
                             <a href="#" class="bnr-fb"></a>
                             <a href="#" class="bnr-vk"></a>
