Еще один бред (последний коммит)

--- a/baners.html
+++ b/baners.html
@@ -57,10 +57,10 @@
 
                     <label>Размер: 
                     <select name="size" >
-                        <option value="normal" selected>200x400</option>
+                        <option value="normal" >200x400</option>
                         <option value="long" >160x600</option>
                         <option value="quadratic" >300x250</option>
-                        <option value="wide" >728x90</option>
+                        <option value="wide" selected>728x90</option>
                     </select></label>   
                 </p>
 
@@ -83,6 +83,8 @@
                     </div>
                     <span class="bnr-prev"><span></span></span>
                     <span class="bnr-next"><span></span></span>
+
+                    <h4 class="bnr-slogan">Сделай себе подарок</h4>
 
                    
                 </div>    
