--- a/baners.html
+++ b/baners.html
@@ -44,27 +44,235 @@
 <body>
 	<div id="mainarea">
         <ul id="list">
+            <!-- банер KidMArtRu во всех стилях и размерах --> 
             <li>
+                <!-- настройки отображения банера (только для демонстрации) -->
                 <p class="selectors">
                     <label>Стиль: 
                     <select name="style" >
-                        <option value="usual" >Обычный </option>
+                        <option value="usual" selected>Обычный </option>
                         <option value="social" >Соцсети </option>
                         <option value="video" >Видео</option>
                         <option value="metro" >Метро</option>
-                        <option value="treed" selected>3-D</option>
+                        <option value="treed" >3-D</option>
                     </select></label>
 
                     <label>Размер: 
                     <select name="size" >
-                        <option value="normal" >200x400</option>
+                        <option value="normal" selected>200x400</option>
                         <option value="long" >160x600</option>
                         <option value="quadratic" >300x250</option>
-                        <option value="wide" selected>728x90</option>
+                        <option value="wide" >728x90</option>
                     </select></label>   
                 </p>
+                <!-- end настройки отображения банера -->
 
-                <!-- Банер Детской одежды -->
+                <!-- структура банера --> 
+                <div class="baner usual normal">
+                    <a href="" class="bnr-logo">&nbsp;<img src="uploads/logo.png"></a>
+
+                    <div class="bnr-prevu"></div>
+                    <span class="bnr-prev"><span></span></span>
+                    <span class="bnr-next"><span></span></span>
+
+                    <ul class="bnr-tumbnails">
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN1.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Дождевик</h3>
+                            <h3 class="bnr-price">2 990 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN2.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Резиновые сапоги Tempo Kids</h3>
+                            <h3 class="bnr-price">870 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN3.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Куртка зимняя Molo</h3>
+                            <h3 class="bnr-price">4 983 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN4.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Резиновые сапоги Tempo Kids</h3>
+                            <h3 class="bnr-price">134 850 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN5.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Резиновые сапоги Tempo Kids</h3>
+                            <h3 class="bnr-price">850 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>   
+                <!-- end структура банера -->  
+            </li>
+            <!-- end банер KidMArtRu во всех стилях и размерах --> 
+
+            <!-- банер KidMArtRu во всех стилях и размерах --> 
+            <li>
+                <!-- настройки отображения банера (только для демонстрации) -->
+                <p class="selectors">
+                    <label>Стиль: 
+                    <select name="style" >
+                        <option value="usual" selected>Обычный </option>
+                        <option value="social" >Соцсети </option>
+                        <option value="video" >Видео</option>
+                        <option value="metro" >Метро</option>
+                        <option value="treed" >3-D</option>
+                    </select></label>
+
+                    <label>Размер: 
+                    <select name="size" >
+                        <option value="normal" selected>200x400</option>
+                        <option value="long" >160x600</option>
+                        <option value="quadratic" >300x250</option>
+                        <option value="wide" >728x90</option>
+                    </select></label>   
+                </p>
+                <!-- end настройки отображения банера -->
+
+                <!-- структура банера --> 
+                <div class="baner usual normal">
+                    <a href="" class="bnr-logo">&nbsp;<img src="uploads/logo.png"></a>
+
+                    <div class="bnr-prevu"></div>
+                    <span class="bnr-prev"><span></span></span>
+                    <span class="bnr-next"><span></span></span>
+
+                    <ul class="bnr-tumbnails">
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN1.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Дождевик</h3>
+                            <h3 class="bnr-price">2 990 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN2.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Резиновые сапоги Tempo Kids</h3>
+                            <h3 class="bnr-price">870 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN3.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Куртка зимняя Molo</h3>
+                            <h3 class="bnr-price">4 983 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN4.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Резиновые сапоги Tempo Kids</h3>
+                            <h3 class="bnr-price">134 850 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                        <li>
+                            <div class="bnr-imgwrap">
+                                <img src="uploads/itemN5.jpg" title="Дождевик" />
+                            </div>
+                            <h3 class="bnr-title">Резиновые сапоги Tempo Kids</h3>
+                            <h3 class="bnr-price">850 руб.</h3>
+                            <a href="#" class="bnr-button">Купить<span></span></a>
+                            <p class="bnr-cosial"><span>Поделиться с друзьями:</span> 
+                                <a href="#" class="bnr-fb"></a>
+                                <a href="#" class="bnr-vk"></a>
+                                <a href="#" class="bnr-ok"></a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>   
+                <!-- end структура банера -->  
+            </li>
+            <!-- end банер KidMArtRu во всех стилях и размерах --> 
+            <!-- банер ТехноСила во всех стилях и размерах --> 
+            <li>
+                <!-- настройки отображения банера (только для демонстрации) -->
+                <p class="selectors">
+                    <label>Стиль: 
+                    <select name="style" >
+                        <option value="usual" selected>Обычный </option>
+                        <option value="social" >Соцсети </option>
+                        <option value="video" >Видео</option>
+                        <option value="metro" >Метро</option>
+                        <option value="treed" >3-D</option>
+                    </select></label>
+
+                    <label>Размер: 
+                    <select name="size" >
+                        <option value="normal" selected>200x400</option>
+                        <option value="long" >160x600</option>
+                        <option value="quadratic" >300x250</option>
+                        <option value="wide" >728x90</option>
+                    </select></label>   
+                </p>
+                <!-- end настройки отображения банера -->
+
+                <!-- структура банера -->  
                 <div class="baner usual normal">
                     <a href="" class="bnr-logo">&nbsp;<img src="uploads/logo.png"></a>
 
@@ -86,10 +294,14 @@
 
                     <h4 class="bnr-slogan">Сделай себе подарок</h4>
 
+
+
                    
-                </div>    
+                </div>   
+                <!-- end структура банера -->   
         
             </li>
+
               <li>
                 <p class="selectors">
                     <label>Стиль: 
